# vize

./: .gitignore  Cargo.toml  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/vize/: Cargo.toml  README.md
crates/vize/src/: config.rs  lib.rs  main.rs
crates/vize/src/commands/: build.rs  check.rs  check_server.rs  fmt.rs  ide.rs  lint.rs  lsp.rs  mod.rs
crates/vize_armature/: Cargo.toml  README.md
crates/vize_armature/src/: parser.rs  tokenizer.rs
crates/vize_atelier_core/: Cargo.toml  README.md
crates/vize_atelier_core/src/: codegen.rs  runtime_helpers.rs  transform.rs  transforms.rs
crates/vize_atelier_core/src/codegen/: children.rs  context.rs  element.rs  expression.rs  helpers.rs  node.rs  patch_flag.rs  props.rs  root.rs  slots.rs  v_for.rs  v_if.rs
crates/vize_atelier_core/src/transform/: element.rs  structural.rs
crates/vize_atelier_core/src/transforms/: hoist_static.rs  transform_element.rs  transform_expression.rs  transform_text.rs  v_bind.rs  v_memo.rs  v_model.rs  v_on.rs  v_once.rs
crates/vize_atelier_dom/: Cargo.toml  README.md
crates/vize_atelier_dom/src/: lib.rs  options.rs
crates/vize_atelier_dom/tests/: dom_snapshot.rs
crates/vize_atelier_dom/tests/snapshots/: dom_snapshot__static_element__nested_elements.snap  dom_snapshot__v_bind__merge_static_and_dynamic_class_with_vbind_object.snap  dom_snapshot__v_bind__merge_static_and_dynamic_style_with_vbind_object.snap  dom_snapshot__v_if__v_if_component_with_named_slot.snap  dom_snapshot__v_if__v_if_component_with_slot.snap  dom_snapshot__v_show__v_show_on_child_component.snap  dom_snapshot__v_show__v_show_on_root_component.snap
crates/vize_atelier_sfc/: Cargo.toml  README.md
crates/vize_atelier_sfc/src/: compile.rs  compile_script.rs  compile_template.rs  css.rs  parse.rs  rewrite_default.rs  script.rs  snapshot_tests.rs  style.rs  types.rs
crates/vize_atelier_sfc/src/compile/: mod.rs  tests.rs
crates/vize_atelier_sfc/src/compile_script/: function_mode.rs  import_utils.rs  inline.rs  macros.rs  props.rs  tests.rs
crates/vize_atelier_sfc/src/css/: mod.rs  parser.rs
crates/vize_atelier_sfc/src/parse/: parse_sfc.rs  tests.rs
crates/vize_atelier_sfc/src/script/: context.rs  define_emits.rs  define_props_destructure.rs  import_usage_check.rs  utils.rs
crates/vize_atelier_ssr/: Cargo.toml
crates/vize_atelier_ssr/src/: codegen.rs  errors.rs  lib.rs  options.rs
crates/vize_atelier_ssr/src/transforms/: mod.rs
crates/vize_atelier_ssr/tests/: ssr_snapshot.rs
crates/vize_atelier_ssr/tests/snapshots/: ssr_snapshot__component__basic_component.snap  ssr_snapshot__component__component_with_children.snap  ssr_snapshot__component__component_with_slot_content.snap  ssr_snapshot__element__basic_elements.snap  ssr_snapshot__element__nested_elements.snap  ssr_snapshot__element__self_closing_div.snap  ssr_snapshot__element__should_ignore_v_on.snap  ssr_snapshot__element__static_attrs.snap  ssr_snapshot__element__static_class_plus_v_bind_class.snap  ssr_snapshot__element__v_bind_boolean.snap  ssr_snapshot__element__v_bind_class.snap  ssr_snapshot__element__v_bind_non_boolean.snap  ssr_snapshot__element__v_bind_object.snap  ssr_snapshot__element__v_bind_style.snap  ssr_snapshot__element__void_element.snap  ssr_snapshot__slot__basic_slot.snap  ssr_snapshot__slot__named_slot.snap  ssr_snapshot__slot__slot_with_fallback.snap  ssr_snapshot__text__comments.snap  ssr_snapshot__text__interpolation.snap  ssr_snapshot__text__nested_elements_with_interpolation.snap  ssr_snapshot__text__nested_elements_with_static_text.snap  ssr_snapshot__text__static_text.snap  ssr_snapshot__text__static_text_escape.snap  ssr_snapshot__text__static_text_with_template_string_special_chars.snap  ssr_snapshot__v_for__basic_v_for.snap  ssr_snapshot__v_for__nested_v_for.snap  ssr_snapshot__v_for__v_for_on_template.snap  ssr_snapshot__v_for__v_for_with_index.snap  ssr_snapshot__v_for__v_for_with_key.snap  ssr_snapshot__v_if__basic_v_if.snap  ssr_snapshot__v_if__v_if_else.snap  ssr_snapshot__v_if__v_if_else_if_else.snap  ssr_snapshot__v_if__v_if_on_template.snap  ssr_snapshot__v_if__v_if_with_text.snap  (+6 more)
crates/vize_atelier_vapor/: Cargo.toml  README.md
crates/vize_atelier_vapor/src/: generate.rs  ir.rs  lib.rs  transform.rs
crates/vize_canon/: Cargo.toml  README.md
crates/vize_canon/src/: checker.rs  context.rs  diagnostic.rs  lib.rs  lsp_client.rs  sfc_typecheck.rs  tsgo_bridge.rs  tsgo_server.rs  types.rs  virtual_ts.rs
crates/vize_canon/tsgo_ffi/: build.sh  main.go
crates/vize_carton/: Cargo.toml  README.md
crates/vize_carton/src/: hash.rs  i18n.rs  lib.rs  lsp.rs
crates/vize_croquis/: Cargo.toml
crates/vize_croquis/src/: analysis.rs  analyzer.rs  builtins.rs  call_graph.rs  css.rs  display.rs  hoist.rs  lib.rs  macros.rs  naming.rs  optimization.rs  provide.rs  reactivity.rs  reactivity_tracking.rs  scope.rs  script_parser.rs  symbol.rs  virtual_ts.rs
crates/vize_fresco/: Cargo.toml
crates/vize_fresco/benches/: render.rs
crates/vize_fresco/src/: lib.rs
crates/vize_glyph/: Cargo.toml  README.md
crates/vize_glyph/benches/: formatter.rs
crates/vize_glyph/src/: error.rs  formatter.rs  lib.rs  options.rs  script.rs  template.rs
crates/vize_maestro/: Cargo.toml  README.md
crates/vize_maestro/src/: lib.rs
crates/vize_musea/: Cargo.toml  README.md
crates/vize_musea/benches/: art_parse.rs
crates/vize_musea/src/: lib.rs  types.rs
crates/vize_patina/: Cargo.toml  README.md
crates/vize_patina/benches/: lint_bench.rs
crates/vize_patina/src/: context.rs  diagnostic.rs  lib.rs  linter.rs  rule.rs  telegraph.rs  visitor.rs
crates/vize_relief/: Cargo.toml  README.md
crates/vize_relief/src/: ast.rs  options.rs
crates/vize_vitrine/: Cargo.toml  README.md
crates/vize_vitrine/src/: napi.rs  wasm.rs
crates/vue_compiler_cli/: Cargo.toml
crates/vue_compiler_cli/src/: main.rs
crates/vue_compiler_sfc/: Cargo.toml
crates/vue_compiler_sfc/src/: compile.rs  compile_script.rs  compile_template.rs  lib.rs  rewrite_default.rs  snapshot_tests.rs
(+726 files in other folders)
