[workspace]
resolver = "2"
members = [
    "crates/vize_carton",
    "crates/vize_relief",
    "crates/vize_armature",
    "crates/vize_atelier_core",
    "crates/vize_atelier_dom",
    "crates/vize_atelier_vapor",
    "crates/vize_atelier_sfc",
    "crates/vize_vitrine",
    "crates/vize",
    "crates/vize_canon",
    "crates/vize_patina",
    "crates/vize_glyph",
    "crates/vize_musea",
    "crates/vize_maestro",
    "tests/vize_test_runner",
]

[workspace.package]
version = "0.0.1-alpha.11"
edition = "2021"
license = "MIT"
repository = "https://github.com/ubugeeei/vize"

[workspace.dependencies]
# Internal crates (path for local dev, version for crates.io)
vize_carton = { path = "crates/vize_carton", version = "0.0.1-alpha.11" }
vize_relief = { path = "crates/vize_relief", version = "0.0.1-alpha.11" }
vize_armature = { path = "crates/vize_armature", version = "0.0.1-alpha.11" }
vize_atelier_core = { path = "crates/vize_atelier_core", version = "0.0.1-alpha.11" }
vize_atelier_dom = { path = "crates/vize_atelier_dom", version = "0.0.1-alpha.11" }
vize_atelier_vapor = { path = "crates/vize_atelier_vapor", version = "0.0.1-alpha.11" }
vize_atelier_sfc = { path = "crates/vize_atelier_sfc", version = "0.0.1-alpha.11", default-features = false }
vize_vitrine = { path = "crates/vize_vitrine", version = "0.0.1-alpha.11" }

# OXC dependencies
oxc_parser = "0.45"
oxc_ast = "0.45"
oxc_span = "0.45"
oxc_allocator = "0.45"
oxc_syntax = "0.45"
oxc_diagnostics = "0.45"
oxc_semantic = "0.45"
oxc_transformer = "0.45"
oxc_codegen = "0.45"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# NAPI
napi = { version = "2.14", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.14"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Arena allocator
bumpalo = { version = "3.16", features = ["collections", "boxed"] }

# Utilities
thiserror = "2.0"
rustc-hash = "2.1"
bitflags = { version = "2.6", features = ["serde"] }
once_cell = "1.20"
compact_str = { version = "0.8", features = ["serde"] }
phf = { version = "0.11", features = ["macros"] }
memoffset = "0.9"
memchr = "2.7"
regex = "1.10"

# CSS
lightningcss = "1.0.0-alpha.68"

# Testing
insta = { version = "1.41", features = ["toml"] }

# Benchmarking
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
