[workspace]
resolver = "2"
members = [
    "crates/vize_carton",
    "crates/vize_relief",
    "crates/vize_armature",
    "crates/vize_croquis",
    "crates/vize_atelier_core",
    "crates/vize_atelier_dom",
    "crates/vize_atelier_vapor",
    "crates/vize_atelier_ssr",
    "crates/vize_atelier_sfc",
    "crates/vize_vitrine",
    "crates/vize",
    "crates/vize_canon",
    "crates/vize_patina",
    "crates/vize_glyph",
    "crates/vize_musea",
    "crates/vize_maestro",
    "crates/vize_fresco",
    "tests/vize_test_runner",
]

[workspace.package]
version = "0.12.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ubugeeei/vize"

[workspace.dependencies]
# Internal crates (path for local dev, version for crates.io)
vize_carton = { path = "crates/vize_carton", version = "0.12.0" }
vize_relief = { path = "crates/vize_relief", version = "0.12.0" }
vize_armature = { path = "crates/vize_armature", version = "0.12.0" }
vize_croquis = { path = "crates/vize_croquis", version = "0.12.0" }
vize_atelier_core = { path = "crates/vize_atelier_core", version = "0.12.0" }
vize_atelier_dom = { path = "crates/vize_atelier_dom", version = "0.12.0" }
vize_atelier_vapor = { path = "crates/vize_atelier_vapor", version = "0.12.0" }
vize_atelier_ssr = { path = "crates/vize_atelier_ssr", version = "0.12.0" }
vize_atelier_sfc = { path = "crates/vize_atelier_sfc", version = "0.12.0", default-features = false }
vize_vitrine = { path = "crates/vize_vitrine", version = "0.12.0", default-features = false }
vize_musea = { path = "crates/vize_musea", version = "0.12.0" }
vize_patina = { path = "crates/vize_patina", version = "0.12.0" }
vize_glyph = { path = "crates/vize_glyph", version = "0.12.0" }
vize_maestro = { path = "crates/vize_maestro", version = "0.12.0" }
vize_canon = { path = "crates/vize_canon", version = "0.12.0", default-features = false }
vize_fresco = { path = "crates/vize_fresco", version = "0.12.0", default-features = false }

# OXC dependencies (git for local dev, version for crates.io publish)
oxc_parser = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_ast = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_ast_visit = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_span = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_allocator = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_syntax = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_diagnostics = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_semantic = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_transformer = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
oxc_codegen = { version = "0.114.0", git = "https://github.com/oxc-project/oxc", branch = "main" }
# oxc_formatter is not yet on crates.io, so vize_glyph is excluded from crates.io publish
oxc_formatter = { git = "https://github.com/oxc-project/oxc", branch = "main" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# NAPI
napi = { version = "2.14", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2.14"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Arena allocator
bumpalo = { version = "3.16", features = ["collections", "boxed"] }

# Utilities
thiserror = "2.0"
rustc-hash = "2.1"
bitflags = { version = "2.6", features = ["serde"] }
once_cell = "1.20"
compact_str = { version = "0.8", features = ["serde"] }
phf = { version = "0.11", features = ["macros"] }
memoffset = "0.9"
memchr = "2.7"
regex = "1.10"
smallvec = { version = "1.13", features = ["union"] }
dashmap = "6.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"

# CSS
lightningcss = "1.0.0-alpha.68"

# Testing
insta = { version = "1.41", features = ["toml"] }

# Benchmarking
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
