[package]
name = "vize"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Vize - High-performance Vue.js toolchain in Rust"

[[bin]]
name = "vize"
path = "src/main.rs"

[lib]
name = "vize"
path = "src/lib.rs"

[dependencies]
# Vize crates (re-exported for unified documentation)
vize_carton = { workspace = true }
vize_relief = { workspace = true }
vize_armature = { workspace = true }
vize_atelier_core = { workspace = true }
vize_atelier_dom = { workspace = true }
vize_atelier_vapor = { workspace = true }
vize_atelier_sfc = { workspace = true, features = ["native"] }
vize_glyph = { workspace = true }
vize_patina = { workspace = true }
vize_canon = { workspace = true }
vize_musea = { workspace = true }
vize_maestro = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Directory walking with .gitignore support
ignore = "0.4"

# Multithreading
rayon = "1.10"

# Async runtime (for LSP)
tokio = { version = "1", features = ["rt-multi-thread"] }

# Serialization (for JSON output)
serde = { workspace = true }
serde_json = { workspace = true }

# TypeScript/JSX transpilation
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_codegen = { workspace = true }
oxc_semantic = { workspace = true }
oxc_span = { workspace = true }
oxc_transformer = { workspace = true }

# Regex for script language detection
regex-lite = "0.1"
