[package]
name = "vize_atelier_sfc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Atelier SFC - The Single File Component workshop for Vize"

[features]
default = ["native"]
native = ["dep:lightningcss"]

[dependencies]
vize_carton = { workspace = true }
vize_atelier_core = { workspace = true }
vize_atelier_dom = { workspace = true }
vize_atelier_vapor = { workspace = true }

# OXC for JavaScript/TypeScript parsing and transformation
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }
oxc_semantic = { workspace = true }
oxc_transformer = { workspace = true }
oxc_codegen = { workspace = true }

rustc-hash = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lightningcss = { workspace = true, optional = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "sfc_parse"
harness = false
