[package]
name = "vize_atelier_vapor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Atelier Vapor - The Vapor mode compiler workshop for Vize"

[dependencies]
vize_carton = { workspace = true }
vize_atelier_core = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
