[package]
name = "vize_croquis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Croquis - Semantic analysis layer for Vize. Quick sketches of meaning from Vue templates."

[dependencies]
vize_carton.workspace = true
vize_relief.workspace = true
phf.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
