[package]
name = "vize_glyph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Glyph - The beautiful letterforms for Vize code formatting"

[dependencies]
# Internal crates
vize_carton.workspace = true
vize_atelier_sfc.workspace = true

# OXC dependencies
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true
oxc_codegen.workspace = true

# Serialization
serde = { workspace = true }

# Utilities
thiserror.workspace = true
memchr.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "formatter"
harness = false
