[package]
name = "vize_patina"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Patina - The quality checker for Vize code linting"

[dependencies]
# Internal crates
vize_relief.workspace = true
vize_armature.workspace = true
vize_carton.workspace = true

# OXC for JS/TS parsing and diagnostics
oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_diagnostics.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true

# Lightning CSS for CSS parsing
lightningcss.workspace = true

# Error handling
thiserror.workspace = true

# Serialization (for config and output)
serde.workspace = true
serde_json.workspace = true

# Utilities
memchr.workspace = true

[dev-dependencies]
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "lint_bench"
harness = false
