[package]
name = "vize_relief"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Relief - The sculptured AST surface for Vize Vue templates"

[dependencies]
vize_carton = { workspace = true }

serde = { workspace = true }
thiserror = { workspace = true }
