[package]
name = "vue_compiler_sfc"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native"]
native = ["dep:lightningcss"]

[dependencies]
vue_allocator = { workspace = true }
vue_shared = { workspace = true }
vue_compiler_core = { workspace = true }
vue_compiler_dom = { workspace = true }
vue_compiler_vapor = { workspace = true }

# OXC for JavaScript/TypeScript parsing and transformation
oxc_parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_allocator = { workspace = true }
oxc_semantic = { workspace = true }
oxc_transformer = { workspace = true }
oxc_codegen = { workspace = true }

rustc-hash = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lightningcss = { workspace = true, optional = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }
toml = { workspace = true }

[[bench]]
name = "sfc_parse"
harness = false
